k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
<<<<<<< HEAD
=======
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
>>>>>>> 0ab6c93e75e705766a49b85cb754bb65f430f005
