k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: maham201/todoapp:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: dockerhub-secret
