k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: todoapp
  ports:
    - port: 3000
      targetPort: 3000
