k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: dev
spec:
  selector:
    app: db
  ports:
    - port: 3306
