k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dev
spec:
  selector:
    app: redis
  ports:
    - port: 6379
